tooltip url truncation + other fixes
git-svn-id: http://svn.localprojects.net/gam2/trunk@967 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -552,7 +552,7 @@ OTHER GLOBAL ELEMENTS
 ----------------------------------------------------------- */
 /* tooltip */
 .tooltip {
-	position:absolute; width:360px; /*height:224px;*/ z-index:1000;
+	position:absolute; width:375px; /*height:224px;*/ z-index:1000;
 	/*background-color:#ffffff; border:1px solid #dbdad9; 
 	border:1px solid rgba(165,165,165,0.4);
 	-moz-box-shadow:-2px 3px 14px rgba(0, 0, 0, 0.4);
